--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -122,8 +122,8 @@
             ],
             "links": [
                 {
-                    "url": "https://aladdine.dev",
-                    "display": "Inspired by Aladdine Abdou"
+                    "url": "https://brittanychiang.com",
+                    "display": "Inspired by Brittany Chiang"
                 }
             ]
         },
