--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -122,8 +122,8 @@
             ],
             "links": [
                 {
-                    "url": "https://aladdine.dev",
-                    "display": "Inspiré par Aladdine Abdou"
+                    "url": "https://brittanychiang.com",
+                    "display": "Inspiré par Brittany Chiang"
                 }
             ]
         },
