--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -19,7 +19,7 @@
         },
         {
             "tooltip": "LinkedIn",
-            "url": "https://www.linkedin.com/in/aladdine-abdou",
+            "url": "https://www.linkedin.com/in/aladdine-dev",
             "iconCodePoint": "0xf08c",
             "iconFontFamily": "FontAwesomeBrands",
             "iconFontPackage": "font_awesome_flutter"
